fixing links to css files in layout template

--- a/caffe.topmonks.cz/src/html/layouts/topmonks.html
+++ b/caffe.topmonks.cz/src/html/layouts/topmonks.html
@@ -17,9 +17,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" async defer integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://unpkg.com/material-components-web@v0.35.0/dist/material-components-web.min.css">
-  <link rel="stylesheet" href="/stylesheets/global/typography.css">
-  <link rel="stylesheet" href="/stylesheets/global/main.css">
-  <link rel="stylesheet" href="/stylesheets/global/anicka.css">
+  <link rel="stylesheet" href="/stylesheets/typography.css">
+  <link rel="stylesheet" href="/stylesheets/main.css">
 
   {% block head %}{% endblock %}
   {% include "shared/app-icons.html" %}
