--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -82,7 +82,7 @@ section {
   -ms-transform: scale(1.03);
   transform: scale(1.03);
   transition: all .25s linear;
-  box-shadow: -1px 4px 24px 0px rgba(0, 0, 0, 0.8);
+  box-shadow: -1px 4px 24px rgba(0, 0, 0, 0.8);
   width: 100%;
 }
 #recnici {
