--- a/caffe.topmonks.cz/src/stylesheets/typography.scss
+++ b/caffe.topmonks.cz/src/stylesheets/typography.scss
@@ -15,7 +15,7 @@ body {
   padding: 0;
   margin: 0 auto;
   max-width: 100%;
-  font-family: Lato, sans-serif, Roboto, Arial, sans-serif;
+  font-family: Lato, sans-serif, Roboto, Arial;
   -webkit-font-kerning: normal;
   font-kerning: normal;
   font-variant-numeric: lining-nums slashed-zero;
