--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -36,11 +36,9 @@ section {
   min-height: 10em;
 }
 #uvod {
-  text-align: left;
   background: url("/images/main_BG.png") center no-repeat;
   background-size: 100%;
   height: 43em;
-  color: #FFFFFF;
   margin: 0 auto;
 
   p {
@@ -51,6 +49,11 @@ section {
   }
   .opening_text {
     margin-top: 7em;
+    color: #FFFFFF;
+    text-align: left;
+  }
+  .newest-news {
+    background-color: #FFFFFF;
   }
 }
 
