--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -35,6 +35,7 @@ section {
   margin-bottom: 3em;
   min-height: 10em;
 }
+
 #uvod {
   background: url("/images/main_BG.png") center no-repeat;
   background-size: 100%;
@@ -54,6 +55,30 @@ section {
   }
   .newest-news {
     background-color: #FFFFFF;
+    max-width: 228px;
+    box-shadow: 0 12px 24px rgba(0, 0, 0, 12);
+    span {
+      font-size: 12px;
+    }
+    svg {
+      margin: 0 auto;
+      padding: 12px 0 0 24px;
+    }
+    .users p {
+      font-size: 14px;
+      color: #999999;
+    }
+    .confirm-btn {
+      margin: 0 auto;
+      a.button {
+        background-color: #01A2C7;
+        padding: 12px 34px;
+        border: none;
+        border-radius: 4px;
+        font-size: 14px;
+        color: #FFFFFF;
+      }
+    }
   }
 }
 
@@ -88,6 +113,7 @@ section {
   box-shadow: -1px 4px 24px rgba(0, 0, 0, 0.8);
   width: 100%;
 }
+
 #recnici {
   background: url("/images/speakers_BG.png") center no-repeat;
   background-size: 100%;
