--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -36,7 +36,7 @@ section {
   min-height: 10em;
 }
 
-.news_content .date {
+.date {
   font-size: 0.875em;
   color: #999999;
 }
@@ -48,7 +48,7 @@ section {
 #uvod {
   background: url("/images/main_BG.png") center no-repeat;
   background-size: 100%;
-  height: 43em;
+  height: 100%;
   margin: 0 auto;
 
   p {
@@ -58,49 +58,44 @@ section {
     text-align: right;
   }
   .opening_text {
-    margin-top: 7em;
+    margin-top: 12em;
     color: #FFFFFF;
     text-align: left;
   }
+
   .newest-news {
     width: 228px;
     height: 535px;
     margin: 6em;
     box-shadow: 0 12px 24px rgba(0, 0, 0, 12);
     background-color: #FFFFFF;
+    p {
+      line-height: 0;
+      font-size: 14px;
+    }
     .news_content {
       padding: 24px 24px 0;
-      span {
-        font-size: 14px;
-      }
       img {
         width: 100%;
-        padding: 0;
       }
     }
-    span {
-      font-size: 12px;
-    }
-    .date, .place {
-      font-size: 12px;
-    }
-    .place svg, .date svg {
-      margin: 0 auto;
-      padding: 4px 0 0 24px;
-    }
-    .meetup-logo svg {
-      padding: 2px 0 0 24px;
+    .news_content-details {
+      span {
+        font-size: 12px;
+      }
+      svg {
+        padding: 10px 24px;
+      }
+      .date {
+        color: #233341;
+      }
+      .meet-up .date {
+        padding: 18px 0;
+      }
     }
 
-    p {
-      font-size: 14px;
-      padding-bottom: 0;
-    }
-    .users p {
-      font-size: 14px;
-      color: #999999;
-    }
     .confirm-btn {
+      width: 100%;
       margin: 0 auto;
       a.button {
         background-color: #01A2C7;
