--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -24,6 +24,10 @@
   --mdc-layout-grid-margin-tablet: 0;
   --mdc-layout-grid-margin-phone: 0;
 }
+header {
+  max-width: 900px;
+  margin: 0 auto;
+}
 
 .tm-layout-grid__cell--span-0-desktop {
   @media screen and (min-width: 840px) {
