--- a/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
+++ b/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
@@ -532,24 +532,8 @@ svg.monk_icon {
   color: #9b9b9b;
 }
 
-.slide {
-  margin: 0 auto;
-  width: auto;
-}
+/*Review Slider */
 
-.slides-wrap .lSSlideOuter .lSPager.lSpg {
-  margin-top: 24px !important;
-}
-
-.slides-wrap .lSSlideOuter .lSPager.lSpg > li a {
-  background-color: #fff;
-  width: 19px;
-  height: 19px;
-}
-
-.slides-wrap .lSSlideOuter .lSPager.lSpg > li.active a {
-  background-color: var(--primary-color);
-}
 
 /*footer Kontakt */
 footer {
