events history content generation implemented
- new pre-build event introduced to generate past events data from mardown files (copied over from old site)
- macro template for event
- images of posters (copied over from old site)

--- a/caffe.topmonks.cz/src/stylesheets/main.scss
+++ b/caffe.topmonks.cz/src/stylesheets/main.scss
@@ -165,8 +165,13 @@ section {
   }
 }
 
-.seance {
-  .seance_posters {
-   margin: 0 auto;
-  }
+//.seance {
+//  .seance_posters {
+//   margin: 0 auto;
+//  }
+//}
+
+// Docasny styl pro history events
+.history img{
+  width: 100%;
 }
